[package]
name = "tools"
description = "A collection of tools to support the creation of the powerd6 system."
version = "0.1.3"

[[bin]]
name = "powerd6_cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
fs = { workspace = true }
module = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[workspace]
members = ["fs", "module"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.3.4", features = ["derive"] }
fs = { path = "./fs" }
module = { path = "./module" }
pathdiff = "0.2.1"
pretty_assertions = "1.3.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
testdir = "0.7.3"
thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
