[package]
name = "tools"
description = "A collection of tools to support the creation of the powerd6 system."
version = "0.4.0"

[[bin]]
name = "powerd6_cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
fs = { workspace = true }
jsonschema = { workspace = true, features = ["draft202012"] }
module = { workspace = true }
module_render = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[workspace]
members = [
    "file_data",
    "fs",
    "fs_data",
    "module",
    "module_render",
    "path_utils",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
clap = { version = "4.3.4", features = ["derive"] }
file_data = { path = "./file_data" }
fs = { path = "./fs" }
fs_data = { path = "./fs_data" }
handlebars = "4.3.7"
jsonschema = { version = "0.17.1", features = ["draft202012"] }
module = { path = "./module" }
module_render = { path = "./module_render" }
path_utils = { path = "./path_utils" }
pathdiff = "0.2.1"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
strum = "0.25"
strum_macros = "0.25"
testdir = "0.7.3"
thiserror = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2.4"
url = { version = "2.3.1", features = ["serde"] }
