[package]
name = "file_data"
description = "Handles reading files into valid data objects"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
pathdiff = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testdir = { workspace = true }
pretty_assertions = { workspace = true }
