[package]
name = "file_data"
description = "Handles reading files into valid data objects"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
pathdiff = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
path_utils = { workspace = true }
testdir = { workspace = true }
pretty_assertions = { workspace = true }
