[package]
name = "fs"
description = "A virtual representation of the file system, prepared to build modules from"
version = "0.1.0"
edition.workspace = true

[dependencies]
pathdiff = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testdir = { workspace = true }
pretty_assertions = { workspace = true }
