[package]
name = "fs_data"
description = "Allows transformation of FileSystems into data"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
file_data = { workspace = true }
fs = { workspace = true }
path_utils = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testdir = { workspace = true }
pretty_assertions = { workspace = true }
