[package]
name = "module"
description = "An oxidized representation of the powerd6 modules and their components."
version = "0.1.0"
edition.workspace = true

[dependencies]
fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testdir = { workspace = true }
pretty_assertions = { workspace = true }