[package]
name = "module"
description = "A representation of powerd6 modules and their components."
version = "0.1.0"
edition = { workspace = true }

[dependencies]
fs = { workspace = true }
serde = { workspace = true , features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
path_utils = { workspace = true }
testdir = { workspace = true }
pretty_assertions = { workspace = true }
