[package]
name = "path_utils"
description = "A collection of utilities for dealing with Paths"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
pathdiff = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
testdir = { workspace = true }
pretty_assertions = { workspace = true }
